refactor: Improve message display methods and test output format